<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_message">The inventory is empty. Press the "+" button to add an item.</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Description</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_price">Price</string>
    <string name="product_supplier_email">Supplier e-mail</string>
    <string name="product_supplier_phone_number">Supplier phone</string>
    <string name="save">Insert Values</string>
    <string name="email_order">Email order</string>
    <string name="phone_order">Phone order</string>
    <string name="delete_product">Delete Product</string>
    <string name="no_description">No product description available.</string>
    <string name="sale">Sale</string>
    <string name="delete_all">Delete all records</string>
    <string name="contact_supplier">Contact Supplier</string>
    <string name="product_id">ID</string>
    <string name="dialog_message">Are you sure you want to delete the entire inventory? This cannot be undone.</string>
    <string name="dialog_message_delete_product">Are you sure you want to delete this record?</string>
    <string name="dialog_positive">Delete</string>
    <string name="dialog_negativ">Cancel</string>
    <string name="menu_action_done">Done</string>
    <string name="default_description">No description given.</string>
    <string name="select_image">Choose an image</string>
    <string name="image_error">You must choose an image</string>
    <string name="invalid_data">Make sure you have entered correct values for all entries.</string>
    <string name="delete_failed">Something went wrong. Could not delete entry.</string>
    <string name="content_description">This is an image of the selcted product.</string>
</resources>
