<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tony.inventoryapp.DetailActivity">

    <TextView
        android:id="@+id/tv_details_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ID" />

    <TextView
        android:id="@+id/tv_details_product_name"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_details_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_id"
        tools:text="Name" />

    <TextView
        android:id="@+id/tv_details_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_details_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_product_name"
        tools:text="Description" />

    <TextView
        android:id="@+id/tv_details_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_details_description"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_description"
        tools:text="Price" />

    <TextView
        android:id="@+id/tv_details_supplier_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_details_price"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_price"
        tools:text="Supplier Phone" />

    <TextView
        android:id="@+id/tv_details_supplier_mail"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_details_supplier_phone"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_supplier_phone"
        tools:text="supplier mail " />

    <Button
        android:id="@+id/btn_decrease"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_details_supply"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:text="-" />

    <Button
        android:id="@+id/btn_increase"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="+"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_details_supply"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_details_supply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/btn_increase"
        app:layout_constraintStart_toEndOf="@+id/btn_decrease"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_supplier_mail" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="125dp" />

    <Button
        android:id="@+id/btn_contact_supplier"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/contact_supplier"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_id_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_id"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/product_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_details_product_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/tv_id_label" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/product_description"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_details_description"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/product_price"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_details_price"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/product_supplier_phone_number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_details_supplier_phone"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/product_supplier_email"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_details_supplier_mail"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/textView5" />

    <ImageView
        android:id="@+id/detail_product_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/content_description"
        app:layout_constraintBottom_toTopOf="@+id/btn_contact_supplier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_details_supply"
        app:srcCompat="@drawable/placeholder" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="494dp" />

</android.support.constraint.ConstraintLayout>
