<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/tv_list_product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="22sp"
        app:layout_constraintEnd_toStartOf="@+id/sale_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="List view name " />

    <TextView
        android:id="@+id/tv_list_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_list_label_quantity"
        app:layout_constraintStart_toEndOf="@+id/tv_list_label_quantity"
        tools:text="list quantity" />

    <TextView
        android:id="@+id/tv_list_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_list_price_label"
        app:layout_constraintStart_toEndOf="@+id/tv_list_price_label"
        tools:text="listPrice" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="85dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sale"
        app:layout_constraintBottom_toBottomOf="@+id/tv_list_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_list_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_price"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tv_list_quantity"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_product_name" />

    <TextView
        android:id="@+id/tv_list_label_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/product_quantity"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_list_product_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_list_product_name"
        android:textSize="18sp" />
</android.support.constraint.ConstraintLayout>