<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout

        android:id="@+id/add_product_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_product_price"
        app:layout_constraintTop_toTopOf="@+id/et_product_price">

        <TextView
            android:id="@+id/tv_add_product_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/product_price"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_product_descriprion"
            app:layout_constraintTop_toBottomOf="@+id/et_product_descriprion"
            tools:text="Product Price" />

        <EditText
            android:id="@+id/et_product_price"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:maxLength="6"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_add_product_price"
            tools:text="Product Price" />

        <EditText
            android:id="@+id/et_supplier_phone_number"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_add_product_supplier_phone"
            tools:text="Supplier Phone Number" />

        <TextView
            android:id="@+id/tv_add_product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="56dp"
            android:text="@string/product_quantity"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_add_product_supplier_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_product_supplier_email"
            tools:text="Quantity" />

        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="0dp"
            android:layout_height="46dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_add_product_name"
            tools:text="Product name" />

        <TextView
            android:id="@+id/tv_add_product_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/product_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_add_product_description"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="48dp"
            android:text="@string/product_description"
            android:maxLength="80"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_add_product_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_product_name"
            tools:text="Product Description" />

        <TextView
            android:id="@+id/tv_add_product_supplier_email"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/product_supplier_email"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_add_product_supplier_phone"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_product_supplier_phone"
            tools:text="Supplier e-mail" />

        <EditText
            android:id="@+id/et_product_descriprion"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/tv_add_product_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_product_description"
            tools:text="Prodcuct Description" />

        <EditText
            android:id="@+id/et_supplier_email"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_add_product_supplier_email"
            tools:text="Supplier e-mail" />

        <TextView
            android:id="@+id/tv_add_product_supplier_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="68dp"
            android:text="@string/product_supplier_phone_number"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_add_product_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_add_product_price"
            tools:text="Supplier Phone Number" />

        <EditText
            android:id="@+id/et_quantity"
            android:layout_width="0dp"
            android:layout_height="47dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_add_product_quantity"
            tools:text="quantity" />

        <Button
            android:id="@+id/btn_save_record"
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/save"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/et_quantity"
            tools:text="Save" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="130dp" />

        <Button
            android:id="@+id/btn_add_choose_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Choose Image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/btn_save_record" />

        <ImageView
            android:id="@+id/add_image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_add_choose_image"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_save_record"
            app:srcCompat="@drawable/placeholder" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>



